--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,33 +1,30 @@
 <VirtualHost *:443>
-    ServerName www.playlistdepressionscore.com
+    ServerName playlistdepressionscore.com
+    ServerAlias www.playlistdepressionscore.com
 
     SSLEngine on
     Include /etc/letsencrypt/options-ssl-apache.conf
 
-    WSGIDaemonProcess spds user=apache group=apache threads=5 home=/var/www/www.playlistdepressionscore.com/ python-home=/var/www/www.playlistdepressionscore.com/env python-path=/var/www/www.playlistdepressionscore.com/env/lib/python3.6/site-packages
-    WSGIScriptAlias / /var/www/www.playlistdepressionscore.com/bin/wsgi.py
+    WSGIDaemonProcess spds user=apache group=apache threads=5 home=/var/www/playlistdepressionscore.com/ python-home=/var/www/playlistdepressionscore.com/env python-path=/var/www/playlistdepressionscore.com/env/lib/python3.6/site-packages
+    WSGIScriptAlias / /var/www/playlistdepressionscore.com/bin/wsgi.py
 
-    Alias /static /var/www/www.playlistdepressionscore.com/static
-    <Directory /var/www/www.playlistdepressionscore.com/static/>
-        Order allow,deny
-        Allow from all
-    </Directory>
-
-    <Directory /var/www/www.playlistdepressionscore.com>
+    <Directory /var/www/playlistdepressionscore.com>
         WSGIProcessGroup spds
         WSGIApplicationGroup %{GLOBAL}
         WSGIScriptReloading On
-        Order deny,allow
+        Order allow,deny
         Allow from all
+        Require all granted
     </Directory>
-	        SSLCertificateFile /etc/letsencrypt/live/blog.justinduch.com/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/blog.justinduch.com/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/blog.justinduch.com/chain.pem
+
+    SSLCertificateFile /etc/letsencrypt/live/playlistdepressionscore.com/cert.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/playlistdepressionscore.com/privkey.pem
+    SSLCertificateChainFile /etc/letsencrypt/live/playlistdepressionscore.com/chain.pem
 </VirtualHost>
 
 # Redirect to SSL
 NameVirtualHost *:80
 <VirtualHost *:80>
-    ServerName www.playlistdepressionscore.com
-    Redirect / https://www.playlistdepressionscore.com
+    ServerName playlistdepressionscore.com
+    Redirect / https://playlistdepressionscore.com
 </VirtualHost>
